# sudoku-pygame

./: README.md  pyproject.toml
src/: client.py  server.py
